# OpenExpression

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json
.cache/clangd/index/: armv7m_mpu.h.134A7C57013BAD6F.idx  clock_setup.c.AD50964304FB9A67.idx  clock_setup.h.9603B9784A6F1D53.idx  cmsis_clang_m.h.116CA98C906434F5.idx  cmsis_compiler.h.F02552FE5AD9B302.idx  cmsis_version.h.EC743F507C1B7336.idx  core_cm4.h.C9934DB7F34C1CA6.idx  globals.c.ACAB8472E6D1A221.idx  globals.h.FBE2B042DE4D2B96.idx  gpio_setup.c.CDFD1A1B738D7633.idx  gpio_setup.h.9393AE438CD21DAA.idx  main.c.AF752E04C5EB33E2.idx  main.h.F31037A7F6BFE7E5.idx  startup_stm32l432xx.S.13421F00E4FBBE23.idx  stm32_hal_legacy.h.EEBECAB0A66BCF56.idx  stm32l432xx.h.FCC9EDB1FA8AD151.idx  stm32l4xx.h.8D0B17BB63FC0D16.idx  stm32l4xx_hal.c.1996B70B7399E8E9.idx  stm32l4xx_hal.h.B0033BD2DEF6B50B.idx  stm32l4xx_hal_adc.c.0F5DF3F66C1FAA49.idx  stm32l4xx_hal_adc.h.60B9A58CC86B034E.idx  stm32l4xx_hal_adc_ex.c.EDB1E5E3C87046BF.idx  stm32l4xx_hal_adc_ex.h.B3E55E7CEE535DDF.idx  stm32l4xx_hal_can.c.112705DD7B83DFC0.idx  stm32l4xx_hal_can.c.E4D5E56E0F862CE1.idx  stm32l4xx_hal_can.h.DC60E12F50049EA3.idx  stm32l4xx_hal_comp.c.D8D56B908163E259.idx  stm32l4xx_hal_comp.h.E57AB1DA58C9F8C0.idx  stm32l4xx_hal_conf.h.F4528DB8F537EF11.idx  stm32l4xx_hal_cortex.c.239DBECCF31E524B.idx  stm32l4xx_hal_cortex.h.F28934C026E8DBD7.idx  stm32l4xx_hal_crc.c.EF3A88D767C98203.idx  stm32l4xx_hal_crc.h.30820F3ED65BD754.idx  stm32l4xx_hal_crc_ex.c.A00BF41B5518FF5E.idx  stm32l4xx_hal_crc_ex.h.F667269D448E7B2B.idx  stm32l4xx_hal_cryp.c.D6E6B03667FE5FA0.idx  stm32l4xx_hal_cryp.h.AB8A4562767F6891.idx  stm32l4xx_hal_cryp_ex.c.17C9002BA497F80C.idx  stm32l4xx_hal_dac.c.59713AD6B603C707.idx  stm32l4xx_hal_dac.h.70869C6DD3B90BA7.idx  (+167 more)
Core/Include/: AS5600.h  clock_setup.h  globals.h  gpio_setup.h  main.h  stm32l4xx_it.h  utils.h
Core/Source/: AS5600.c  clock_setup.c  globals.c  gpio_setup.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  utils.c
Drivers/CMSIS/Include/: stm32l432xx.h
Drivers/stm32l4xx_hal_driver/Src/: stm32l4xx_hal_cryp.c  stm32l4xx_hal_i2c.c
cmake/: gcc-arm-none-eabi.cmake
